// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleaseNotesDialog is displayed for an uninstalled app 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Release notes for Uninstalled One Test App
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          <div
            class="release-notes"
          >
            <p>
              Release notes for one uninstalled app
            </p>
          </div>
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-transparent tw-bg-nordicBlue tw-text-white active:enabled:tw-bg-nordicBlue-700 "
            type="button"
          >
            Install
          </button>
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700 active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ReleaseNotesDialog is displayed for an up-to-date installed app 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Release notes for Downloadable Another Test App
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          <div
            class="release-notes"
          >
            <p>
              Release notes for another installed app
            </p>
          </div>
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700 active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ReleaseNotesDialog is displayed for an updatable app 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Release notes for Downloadable Third Test App
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          <div
            class="release-notes"
          >
            <p>
              Release notes for a third updatable app
            </p>
          </div>
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-transparent tw-bg-nordicBlue tw-text-white active:enabled:tw-bg-nordicBlue-700 "
            type="button"
          >
            Update to latest version
          </button>
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700 active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ReleaseNotesDialog is hidden again after closing the dialog 1`] = `
<body
  class=""
  style="padding-right: 0px;"
>
  <div />
</body>
`;

exports[`ReleaseNotesDialog is initially invisible 1`] = `
<body>
  <div />
</body>
`;
